namespace ServiceOrderManager.Models
{
    public enum StatusOS
    {
        Open = 1,
        Working = 2,
        Waiting = 3,
        Closed = 4,
        CAnceld = 5
    }
}
